--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-softwrap",
+  "name": "user-management-server",
   "version": "1.0.0",
   "description": "node api rest softwrap test",
   "main": "app.js",
@@ -7,27 +7,28 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn  --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm":"npx ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
+    "@types/cors": "2.8.8",
+    "@types/express": "4.17.9",
+    "@typescript-eslint/eslint-plugin": "4.8.2",
+    "@typescript-eslint/parser": "4.8.2",
+    "dotenv": "16.0.0",
     "eslint": "7.12.1",
-    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
-    "jest": "^26.6.3",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "jest": "26.6.3",
+    "ts-node-dev": "1.0.0",
+    "typescript": "4.1.2"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pg": "^8.5.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29"
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "pg": "8.5.1",
+    "reflect-metadata": "0.1.13",
+    "typeorm": "0.2.29"
   }
 }
