--- a/web/package.json
+++ b/web/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "web",
+  "name": "user-management-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
+    "@material-ui/core": "4.11.2",
+    "axios": "0.21.0",
+    "bootstrap": "4.5.3",
+    "react": "17.0.1",
+    "react-bootstrap": "1.4.0",
+    "react-dom": "17.0.1",
+    "react-icons": "4.1.0",
+    "react-input-mask": "2.0.4",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "styled-components": "5.2.1",
+    "sweetalert": "2.1.2",
+    "web-vitals": "0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,23 +42,24 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "11.2.2",
+    "@testing-library/user-event": "12.2.2",
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14.10",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-input-mask": "3.0.0",
+    "@types/react-router-dom": "5.1.6",
+    "@types/styled-components": "5.1.4",
+    "@typescript-eslint/eslint-plugin": "4.8.2",
+    "@typescript-eslint/parser": "4.8.2",
     "eslint": "7.12.1",
-    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "^7.21.5",
-    "typescript": "^4.1.2"
+    "eslint-plugin-react": "7.21.5",
+    "typescript": "4.1.2"
   }
 }
